[package]
name = "pokegameboy"
version = "0.1.0"
edition = "2024"


[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Window", "Document", "HtmlCanvasElement", "ImageData"] }
minifb = "0.27"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
