[package]
name = "pokegameboy"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "ImageData",
    "Window",
    "Document",
    "HtmlCanvasElement"
]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minifb = "0.24"
